--- a/orcldb.yaml
+++ b/orcldb.yaml
@@ -44,15 +44,15 @@ spec:
         app: oracle
     spec:
       containers:
-#      - image: fra.ocir.io/telefonicacloud2/atrepo/orcldb:latest
-      - image: container-registry.oracle.com/database/standard
+      - image: fra.ocir.io/telefonicacloud2/atrepo/orcldb:latest
+#      - image: container-registry.oracle.com/database/standard
         name: orcldb
         ports:
         - containerPort: 1521
           name: orcldb
-        volumeMounts:
-        - name: orcldb-pers-stor1
-          mountPath: /ORCL
+#        volumeMounts:
+#        - name: orcldb-pers-stor1
+#          mountPath: /ORCL
 #       - name: orcldb-pers-stor2
 #          mountPath: /home/oracle/
       imagePullSecrets:
