--- a/orcldb.yaml
+++ b/orcldb.yaml
@@ -44,7 +44,8 @@ spec:
         app: oracle
     spec:
       containers:
-      - image: fra.ocir.io/telefonicacloud2/atrepo/orcldb:latest
+       - image: javiermugueta/orcl
+#      - image: fra.ocir.io/telefonicacloud2/atrepo/orcldb:latest
 #      - image: container-registry.oracle.com/database/standard
         name: orcldb
         ports:
