--- a/orcldb.yaml
+++ b/orcldb.yaml
@@ -1,3 +1,31 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: orcldb-pvc1
+  labels:
+    app: oracle
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 200Gi
+  storageClassName: oci
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: orcldb-pvc2
+  labels:
+    app: oracle
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
+  storageClassName: oci
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,8 +44,8 @@ spec:
         app: oracle
     spec:
       containers:
-       - image: javiermugueta/orcl
-#      - image: fra.ocir.io/telefonicacloud2/atrepo/orcldb:latest
+#       - image: javiermugueta/orcl
+      - image: fra.ocir.io/telefonicacloud2/atrepo/orcldb:latest
 #      - image: container-registry.oracle.com/database/standard
         name: orcldb
         ports:
@@ -28,8 +56,8 @@ spec:
 #          mountPath: /ORCL
 #       - name: orcldb-pers-stor2
 #          mountPath: /home/oracle/
-#      imagePullSecrets:
-#        - name: orclcred
+      imagePullSecrets:
+        - name: orclcred
 #      volumes:
 #        - name: orcldb-pers-stor1
 #          persistentVolumeClaim:
