--- a/orcldb.yaml
+++ b/orcldb.yaml
@@ -52,22 +52,17 @@ spec:
         ports:
         - containerPort: 1521
           name: orcldb
-#        volumeMounts:
-#        - name: orcldb-pers-stor1
-#          mountPath: /ORCL
+        volumeMounts:
+        - name: orcldb-pers-stor1
+          mountPath: /ORCL
 #       - name: orcldb-pers-stor2
 #          mountPath: /home/oracle/
       imagePullSecrets:
         - name: orclcred
-#      volumes:
-#        - name: orcldb-pers-stor1
-#          persistentVolumeClaim:
-#            claimName: orcldb-pvc1
+      volumes:
+        - name: orcldb-pers-stor1
+          persistentVolumeClaim:
+            claimName: orcldb-pvc1
 #        - name: orcldb-pers-stor2
 #          persistentVolumeClaim:
 #            claimName: orcldb-pvc2
-
-
-
-
-  
