--- a/orcldb.yaml
+++ b/orcldb.yaml
@@ -73,8 +73,8 @@ spec:
         app: oracledb
     spec:
       containers:
-#       - image: javiermugueta/orcl
-      - image: fra.ocir.io/telefonicacloud2/atrepo/orcldb:latest
+      - image: javiermugueta/orcl
+#      - image: fra.ocir.io/telefonicacloud2/atrepo/orcldb:latest
 #      - image: container-registry.oracle.com/database/standard
         name: orcldb
         ports:
