--- a/orcldb.yaml
+++ b/orcldb.yaml
@@ -80,30 +80,30 @@ spec:
         ports:
         - containerPort: 1521
           name: orcldb
-        volumeMounts:
-        - name: orcldb-pers-stor1
-          mountPath: /u01
-        - name: orcldb-pers-stor2
-          mountPath: /u02
-        - name: orcldb-pers-stor3
-          mountPath: /u03
-        - name: orcldb-pers-stor4
-          mountPath: /u04
+#        volumeMounts:
+#        - name: orcldb-pers-stor1
+#          mountPath: /u01
+#        - name: orcldb-pers-stor2
+#          mountPath: /u02
+#        - name: orcldb-pers-stor3
+#          mountPath: /u03
+#        - name: orcldb-pers-stor4
+#          mountPath: /u04
       imagePullSecrets:
         - name: orclcred
-      volumes:
-        - name: orcldb-pers-stor1
-          persistentVolumeClaim:
-            claimName: orcldb-pvcu1
-        - name: orcldb-pers-stor2
-          persistentVolumeClaim:
-            claimName: orcldb-pvcu2
-        - name: orcldb-pers-stor3
-          persistentVolumeClaim:
-            claimName: orcldb-pvcu3
-        - name: orcldb-pers-stor4
-          persistentVolumeClaim:
-            claimName: orcldb-pvcu4
+#      volumes:
+#        - name: orcldb-pers-stor1
+#          persistentVolumeClaim:
+#            claimName: orcldb-pvcu1
+#        - name: orcldb-pers-stor2
+#          persistentVolumeClaim:
+#            claimName: orcldb-pvcu2
+#        - name: orcldb-pers-stor3
+#          persistentVolumeClaim:
+#            claimName: orcldb-pvcu3
+#        - name: orcldb-pers-stor4
+#          persistentVolumeClaim:
+#            claimName: orcldb-pvcu4
 ---
 apiVersion: v1
 kind: Service
