--- a/orcldb.yaml
+++ b/orcldb.yaml
@@ -80,9 +80,9 @@ spec:
         ports:
         - containerPort: 1521
           name: orcldb
-#        volumeMounts:
-#        - name: orcldb-pers-stor1
-#          mountPath: /u01
+        volumeMounts:
+        - name: orcldb-pers-stor1
+          mountPath: /pppp
 #        - name: orcldb-pers-stor2
 #          mountPath: /u02
 #        - name: orcldb-pers-stor3
@@ -91,10 +91,10 @@ spec:
 #          mountPath: /u04
       imagePullSecrets:
         - name: orclcred
-#      volumes:
-#        - name: orcldb-pers-stor1
-#          persistentVolumeClaim:
-#            claimName: orcldb-pvcu1
+      volumes:
+        - name: orcldb-pers-stor1
+          persistentVolumeClaim:
+            claimName: orcldb-pvcu1
 #        - name: orcldb-pers-stor2
 #          persistentVolumeClaim:
 #            claimName: orcldb-pvcu2
