--- a/orcldb.yaml
+++ b/orcldb.yaml
@@ -82,7 +82,7 @@ spec:
           name: orcldb
         volumeMounts:
         - name: orcldb-pers-stor1
-          mountPath: /ORCL
+          mountPath: /pepe
 #        - name: orcldb-pers-stor2
 #          mountPath: /u02
 #        - name: orcldb-pers-stor3
