--- a/orcldb.yaml
+++ b/orcldb.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
 #      - image: javiermugueta/oracledb
-#      - image: fra.ocir.io/telefonicacloud2/atrepo/orcldb:latest
+#      - image: fra.ocir.io/<tenantname>/atrepo/orcldb:latest
       - image: container-registry.oracle.com/database/enterprise:12.2.0.1
         name: orcldb
         ports:
